# CrewForge

./: .env.example  .gitignore  CONTRIBUTING.md  HANDOVER.md  README.md  ROADMAP.md  SECURITY.md  crewforge.db  crewforge.db-shm  crewforge.db-wal  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  QUICKSTART.md
server/: __init__.py  __main__.py  app.py  batches.py  builtin_tools.py  cli.py  evals.py  llms.py  mcp.py  personas.py  pricing.py  providers.py  registry.py  runner.py  schedules.py  secrets.py  security.py  seed.py  store.py  templates.py
server/compiler/: __init__.py  adapter.py  exporter.py  knowledge_tool.py  manifest.py  tools.py
server/knowledge/: __init__.py  extract.py  github.py  graph.py  kb.py  vector.py  web.py
spikes/: SPIKE_FINDINGS.md
spikes/spike_a_manifest/: introspect.py
spikes/spike_b_runloop/: run.py
tests/: conftest.py  test_batches.py  test_builtin_tools.py  test_conditional_tasks.py  test_core.py  test_evals.py  test_knowledge_graph.py  test_knowledge_phase2.py  test_pricing.py  test_runner_hitl.py  test_schedules.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: CrewCanvas.tsx  DynamicForm.tsx  EventTimeline.tsx  KbGraphView.tsx  Sidebar.tsx  ui.tsx
web/src/lib/: api.ts  toast.tsx
web/src/pages/: Builder.tsx  Code.tsx  Dashboard.tsx  Knowledge.tsx  Mcp.tsx  Runs.tsx  Settings.tsx  Skills.tsx  Tools.tsx
